--- a/front/Pages/Formulario.razor
+++ b/front/Pages/Formulario.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager nav
 @inject ProtectedSessionStorage storage
 
-<div class="formulario">  
+@* <div class="formulario">  
 
     <div class = "formularioinicio">
     
@@ -36,4 +36,4 @@
 
     </div>
     
-</div>
+</div> *@
