--- a/front/Pages/Index.razor
+++ b/front/Pages/Index.razor
@@ -1,23 +1,25 @@
 ﻿@page "/"
 
+@inject NavigationManager nav
+
 <PageTitle>CURITIBANDO: Blog dos Viajantes</PageTitle>
 
     <!-- Banner principal -->
 
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
-      <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
-          <div>
-            <h1>Conheça <span class="text-warning">Curitiba</span></h1>
-            <p class="lead my-4">
-              Conte-nos suas histórias por Curitiba e faça parte da nossa comunidade para quem deseja descobrir os melhores locais na cidade!
-            </p>
-            <button class="btn btn-primary btn-lg">COMPARTILHAR</button>
-          </div>
-          <img class="img-fluid w-50 d-none d-sm-block" src="img/jardimBanner.jpg" alt="">          
+  <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+          <h1>Conheça <span class="text-warning">Curitiba</span></h1>
+          <p class="lead my-4">
+            Conte-nos suas histórias por Curitiba e faça parte da nossa comunidade para quem deseja descobrir os melhores locais na cidade!
+          </p>
+          <button class="btn btn-primary btn-lg" onclick="@Compartilhar">COMPARTILHAR</button>
         </div>
+        <img class="img-fluid w-50 d-none d-sm-block" src="img/jardimBanner.jpg" alt="">          
       </div>
-    </section>
+    </div>
+  </section>
     
     <!-- Barra de pesquisa -->
 <section class="bg-primary text-light p-5">
@@ -106,3 +108,11 @@
     </div>
   </div>
 </section>
+
+@code 
+{
+  public void Compartilhar()
+  {
+    nav.NavigateTo("/formulario/0");
+  }
+}
