--- a/front/Shared/MainLayout.razor
+++ b/front/Shared/MainLayout.razor
@@ -1,5 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+@using Services;
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+
+@inject ProtectedSessionStorage storage
+
 <PageTitle>WebSiteViagem</PageTitle>
 
 <header>
@@ -25,9 +30,16 @@
         <li class="nav-item">
             <a href="/register" class="nav-link">Cadastro</a>
         </li>
-        <li class="nav-item">
-            <a href="/login" class="nav-link">Login</a>
-        </li>
+        @if (!logado)
+        {
+            <li class="nav-item">
+                <a href="/login" class="nav-link">Login</a>
+            </li>
+        }
+        else
+        {
+            
+        }
         <li class="nav-item">
             <a href="#Suporte" class="nav-link">Suporte</a>
         </li>
@@ -39,3 +51,18 @@
 <main>
     @Body
 </main>
+
+@code {
+
+    bool logado = false;
+    protected override async void OnAfterRender(bool firstRender)
+    {
+        var valor = await storage.GetAsync<bool>("logado");
+
+        if (valor.Success)
+            logado = valor.Value;
+        else logado = false;
+
+        StateHasChanged();
+    }
+}
