--- a/front/Pages/User.razor
+++ b/front/Pages/User.razor
@@ -7,3 +7,9 @@
 @inject NavigationManager nav
 @inject ProtectedSessionStorage storage
 
+
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Conte sua experiência / Curiosidades / Dicas</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+
