--- a/front/Pages/Formulario.razor
+++ b/front/Pages/Formulario.razor
@@ -18,19 +18,19 @@
 
 @* <div class="formulario">  
 
-    <div class = "formularioinicio">
+    <div class= "formularioinicio">
     
         <h1>Por favor, preencha o formulario abaixo com o maior número de informações possível. Nos campos 
             "Conte sua experiência" você pode fazer um relato livre sobre cada tema.</h1>
     
         <p>
             <label>Cidade Visitada</label>
-            <input type="text" @bind-value="@VisitedCity"/>
+            <input type="text" @bind-value="@visitedCity"/>
         </p>
 
         <p>
             <label>Data de Chegada</label>
-            <input type="date" @bind-value="@ArrivalDate"/>
+            <input type="date" @bind-value="@arrivalDate"/>
         </p>
 
         <p>
@@ -39,7 +39,7 @@
         </p>
 
 
-        <button onclick="@advance">
+        <button onclick="">
             Avançar
         </button>
 
