--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -32,13 +32,11 @@
         </p>
         }
         <p>
-            <label>E-mail</label>
-            <input type="text" @bind-value="@email"/>
+            <input type="text" @bind-value="@email" placeholder="E-mail"/>
         </p>
 
-        <p>
-            <label>Senha</label>
-            <input type="password" @bind-value="@password"/>
+        <p>            
+            <input type="password" @bind-value="@password" placeholder="Senha"/>
         </p>
 
         <button onclick="@UserLogin">
@@ -46,6 +44,7 @@
         </button>
     </div>
     </div>
+
 </body>
 
 
