--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -77,6 +77,6 @@
 
         await storage.SetAsync("logado", true);
         await storage.SetAsync("token", result);
-        nav.NavigateTo("/");
+        nav.NavigateTo("/usuario");
     }
 }
