--- a/front/Pages/User.razor
+++ b/front/Pages/User.razor
@@ -7,6 +7,31 @@
 @inject NavigationManager nav
 @inject ProtectedSessionStorage storage
 
+<body class= "usercontainer">
 
+        <p>
+            <h1>USUÁRIO <span class="badge badge-secondary"></span></h1>          
+        </p>
+    
+    
+</body>
+
+       
+   
+
+
+
+@code 
+{
+    private string name;
+    private string password;
+    
+
+    public async void UserLogin()
+    {
+        
+        nav.NavigateTo("/usuario");
+    }
+}
 
 
