--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -40,7 +40,7 @@
         </p>
 
         <button onclick="@UserLogin">
-            Entrar
+            Login
         </button>
     </div>
     </div>
@@ -50,13 +50,8 @@
 
 @code 
 {
-    private string name;
-    private string password;
-    private string repeatpassword;
+    private string password;    
     private string email;
-    private string city;
-    private string state;
-    private string country;
     private string userId;
     private string loginError;
 
