--- a/front/Pages/Login.razor.css
+++ b/front/Pages/Login.razor.css
@@ -1,4 +1,4 @@
-/* .logincontainer{
+.logincontainer{
    padding: 10px;
    background-color: #000000;
    border: 5px;
@@ -49,38 +49,5 @@
    top: 0px;
    background: #000000;
    border-radius: 16px 0px 0px 16px;
-} */
-
-html,
-body {
-  height: 100%;
 }
 
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
-
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-}
-
-.form-signin .form-floating:focus-within {
-  z-index: 2;
-}
-
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
