--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -7,45 +7,99 @@
 @inject NavigationManager nav
 @inject ProtectedSessionStorage storage
 
-<body class= "bodycontainer">
-
-    <body class= "body1container">
-    
-        <div class="sejabemvindo">
-            <p>
-                <h1>CURITIBANDO</h1>
-                <h1>Seja bem-vindo!</h1>
-                <h1>Acesse sua conta agora mesmo.</h1>
-            </p>
-    
-        </div>
-    </body>
-</body>
-<body class= "log1container">
-    <div class="logcontainer">
-    
-    <div class="logincontainer">
-        @if (loginError != "")
-        {
-        <p>
-            <label style="color: red;">@loginError</label>
-        </p>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        } 
+        body{
+            background: rgb(153, 172, 172);
         }
-        <p>
-            <input type="text" @bind-value="@email" placeholder="E-mail"/>
-        </p>
+        .row{
+            background: rgb(254, 254, 254);
+            border-radius: 10px;
 
-        <p>            
-            <input type="password" @bind-value="@password" placeholder="Senha"/>
-        </p>
+        }
+        img{
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .btn1{
+            border: none;
+            outline: none;
+            height: 50px;
+            width: 100%;
+            background-color: black;
+            color: white;
+            border-radius: 4px;
+            font-weight: bold;
+        }
+        .btn1:hover{
+            background: white;
+            border: 1px solid;
+            color: black;
+        }
+        .photo-container {
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+        }
 
-        <button onclick="@UserLogin">
-            Login
-        </button>
-    </div>
-    </div>
+    </style>
+  </head>
+  <body>
+    
+    <section class="box-container Form my-4 mx-5">
+        <div class="container">
+            <div class="row no-gutters">
+                <div class="photo-container col-lg-5">
+                   <img src="img/curitibandoLogoPreto.png" class="img-fluid" alt=""> 
+                </div>
+                <div class="col-lg-7 px-5 pt-3"> 
+                    
+                    <form>
+                        <div class="form-row">
+                            <div class="col-lg-7">
+                                <input type="email" placeholder="Email"class="form-control my-3 p-2">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-lg-7">
+                                <input type="******" placeholder="Senha"class="form-control my-3 p-2">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-lg-7">
+                                <button type="button" class="btn1 mt-3 mb-5">Login</button>
+                            </div>
+                        </div>
+                        <a href="#">Esqueci minha senha</a>
+                        <p>Não tem uma conta? <a href="#">Cadastre-se aqui</a></p>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"
+                                value="Lembre de mim">Lembre de mim
+                            </label>
+
+                        </div>
+                    </form>
+
+                </div> 
+            </div>
+        </div>
+
+    </section>
 
 </body>
+
 
 
 @code 
@@ -72,6 +126,6 @@
 
         await storage.SetAsync("logado", true);
         await storage.SetAsync("token", result);
-        nav.NavigateTo("/usuario");
+        nav.NavigateTo("/");
     }
 }
