--- a/front/Pages/Login.razor.css
+++ b/front/Pages/Login.razor.css
@@ -1,53 +1,33 @@
-.logincontainer{
-   padding: 10px;
-   background-color: #000000;
-   border: 5px;
-   border-color: blue;
-   border-radius: 16px 0px 0px 16px;;
-   position: center;
-   width: 530px;
-   height: 250px;
-   left: 117px;
-   top: 208px;
+html,
+body {
+  height: 100%;
 }
 
-.logcontainer{
-   display: flex;
-   flex-direction: row;
-   justify-content: space-around;
-   align-items: center;
-   background: #000000;
-   border-radius: 10px;
-   font-family: 'Poppins';
-   font-style: normal;
-   font-weight: 900;
-   font-size: 27px;
-   line-height: 122.02%;
-   color: #FFFFFF;
-   
+body {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
 }
 
-.bodycontainer{
-   position: absolute;
-   width: 343.35px;
-   height: 51.02px;
-   left: 85px;
-   top: 550px;
-   font-family: 'Poppins';
-   font-style: normal;
-   font-weight: 900;
-   font-size: 27px;
-   line-height: 122.02%;
-   color: #FFFFFF;
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
 }
 
-.html{
-   position: absolute;
-   width: 509.98px;
-   height: 100%;
-   left: 0px;
-   top: 0px;
-   background: #000000;
-   border-radius: 16px 0px 0px 16px;
+.form-signin .form-floating:focus-within {
+  z-index: 2;
 }
 
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
