--- a/front/Shared/MainLayout.razor
+++ b/front/Shared/MainLayout.razor
@@ -30,6 +30,9 @@
         <li class="nav-item">
             <a href="/register" class="nav-link">Cadastro</a>
         </li>
+        <li class="nav-item">
+            <a href="/formulario" class="nav-link">Formulario</a>
+        </li> 
         @if (!logado)
         {
             <li class="nav-item">
